fixed IE11 text wrapping bug

--- a/site/styles/_pages.scss
+++ b/site/styles/_pages.scss
@@ -103,7 +103,7 @@
     }
     p {
       font-size: 14px;
-      overflow-wrap: break-word;
+      word-wrap: break-word;
     }
     strong {
       font-weight: $font-weight-bold;
