--- a/site/styles/main.scss
+++ b/site/styles/main.scss
@@ -347,5 +347,5 @@ s72-classification-label {
 
 //text wrap fix
 h1, h2, h3, h4, h5, h6, p, .title {
-  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
